--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "./dist/index.js",
 	"scripts": {
 		"start:idaho": "tsc && node ./dist/idaho/index.js",
-		"start:oregon": "tsc && node ./dist/oregon/index.js"
+		"start:oregon": "tsc && node ./dist/oregon/index.js",
+		"start:california": "tsc && node ./dist/california/index.js"
 	},
 	"repository": {
 		"type": "git",
@@ -26,10 +27,12 @@
 		"@types/axios": "^0.14.0",
 		"@types/cheerio": "^0.22.15",
 		"@types/node": "^13.5.0",
+		"@types/puppeteer": "^2.0.0",
 		"typescript": "^3.7.5"
 	},
 	"dependencies": {
 		"axios": "^0.19.2",
-		"cheerio": "^1.0.0-rc.3"
+		"cheerio": "^1.0.0-rc.3",
+		"puppeteer": "^2.1.1"
 	}
 }
