--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"start:idaho": "tsc && node ./dist/idaho/index.js",
 		"start:oregon": "tsc && node ./dist/oregon/index.js",
-		"start:california": "tsc && node ./dist/california/index.js"
+		"start:california": "tsc && node ./dist/california/index.js",
+		"start:delaware": "tsc && node ./dist/delaware/index.js"
 	},
 	"repository": {
 		"type": "git",
@@ -26,11 +27,16 @@
 	"devDependencies": {
 		"@types/axios": "^0.14.0",
 		"@types/cheerio": "^0.22.15",
+		"@types/dotenv": "^8.2.0",
 		"@types/node": "^13.5.0",
+		"@types/puppeteer": "^2.0.1",
 		"typescript": "^3.7.5"
 	},
 	"dependencies": {
+		"@infosimples/node_two_captcha": "^1.0.2",
 		"axios": "^0.19.2",
-		"cheerio": "^1.0.0-rc.3"
+		"cheerio": "^1.0.0-rc.3",
+		"dotenv": "^8.2.0",
+		"puppeteer": "^2.1.1"
 	}
 }
