--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"start:newMexico": "tsc && node ./dist/newMexico/index.js",
 		"start:colorado": "tsc && node ./dist/colorado/index.js",
 		"start:northDakota": "tsc && node ./dist/northDakota/index.js",
-		"start:connecticut": "tsc && node ./dist/connecticut/index.js"
+		"start:connecticut": "tsc && node ./dist/connecticut/index.js",
+		"start:westVirginia": "tsc && node ./dist/westVirginia/index.js"
 	},
 	"repository": {
 		"type": "git",
