--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"start:newYork": "tsc && node ./dist/newYork/index.js",
 		"start:illinois": "tsc && node ./dist/illinois/index.js",
 		"start:michigan": "tsc && node ./dist/michigan/index.js",
-		"start:ohio": "tsc && node ./dist/ohio/index.js"
+		"start:ohio": "tsc && node ./dist/ohio/index.js",
+		"start:maine": "tsc && node ./dist/maine/index.js"
 	},
 	"repository": {
 		"type": "git",
