--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
 		"start:hawaii": "tsc && node ./dist/hawaii/index.js",
 		"start:alaska": "tsc && node ./dist/alaska/index.js",
 		"start:alabama": "tsc && node ./dist/alabama/index.js",
-		"start:arizona": "tsc && node ./dist/arizona/index.js",
-		"start:hubzu": "tsc && node ./dist/hubzu/index.js"
+		"start:arizona": "tsc && node ./dist/arizona/index.js"
 	},
 	"repository": {
 		"type": "git",
