Arkansas Secretary of State

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 		"start:hawaii": "tsc && node ./dist/hawaii/index.js",
 		"start:alaska": "tsc && node ./dist/alaska/index.js",
 		"start:alabama": "tsc && node ./dist/alabama/index.js",
-		"start:arizona": "tsc && node ./dist/arizona/index.js"
+		"start:arizona": "tsc && node ./dist/arizona/index.js",
+		"start:arkansas": "tsc && node ./dist/arkansas/index.js"
 	},
 	"repository": {
 		"type": "git",
