--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"@types/cheerio": "^0.22.15",
 		"@types/dotenv": "^8.2.0",
 		"@types/form-data": "^2.5.0",
+		"@types/json2csv": "^5.0.1",
 		"@types/node": "^13.5.0",
 		"@types/puppeteer": "^2.0.1",
 		"typescript": "^3.7.5"
@@ -57,6 +58,7 @@
 		"cheerio": "^1.0.0-rc.3",
 		"dotenv": "^8.2.0",
 		"form-data": "^3.0.0",
+		"json2csv": "^5.0.3",
 		"puppeteer": "^2.1.1"
 	}
 }
